@@ -50,7 +50,6 @@ RESOURCES =  \
 EXTRAS = 
 
 REFERENCES =  \
-	$(GTK_SHARP_20_LIBS) \
 	-pkg:gtk-sharp-2.0 \
 	-r:Mono.Posix \
 	-r:System
